--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "epubjs": "^0.3.84",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "web-storage-cache": "^1.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
